<resources>
    <string name="app_name">hikvision-for-dorid</string>
    <string name="nothing" />
    <string name="default_username">admin</string>
    <string name="default_password">12345</string>
    <string name="denotation_colon">:</string>
    <string name="demo">Demo</string>
    <string name="kConfirm">Confirm</string>
    <string name="kCancel">Cancel</string>
    <string name="kPassword">Password</string>
    <string name="kPasswordPlaceHolder">Enter password</string>
    <string name="kPrompt">Hint</string>
    <string name="kSet">Set</string>
    <string name="kCall">Call</string>
    <string name="kLogoutApp">Exit？</string>
    <string name="kLogoutting">Closing…</string>
    <string name="kLoading">Logging in</string>
    <string name="kLiveView">Live View</string>
    <string name="kStartingLiveView">Starting live view…</string>
    <string name="kStopping">Stopping…</string>
    <string name="kQuality1">Clear</string>
    <string name="kQuality2">Balanced</string>
    <string name="kQuality3">Fluent</string>
    <string name="kQualityCustom">Custom</string>
    <string name="kModifyingQuality">Configuring stream…</string>
    <string name="kModifyQualityFail">Failed to configure stream.</string>
    <string name="kCamera">Camera</string>
    <string name="kPtzZoom">Zoom</string>
    <string name="kPtzFocus">Focus</string>
    <string name="kPtzIris">Iris</string>
    <string name="kEnterPreset">Enter the preset No.</string>
    <string name="kPresetPositionRange">Please specify the preset No. between 1 and 256.</string>
    <string name="kStreamType">Stream Type</string>
    <string name="kMainStream">Main Stream</string>
    <string name="kSubStream">Sub Stream</string>
    <string name="kResolution">Resolution</string>
    <string name="kFrameRate">Frame Rate</string>
    <string name="kBitrate">Bitrate</string>
    <string name="kCustomizeQuality">The recording of the device may be affected due to the new settings.</string>
    <string name="kZeroAlarmOutput">No alarm output is available.</string>
    <string name="kAlarmManage">Alarm</string>
    <string name="cloudmessage_set">Alarm Push Notification</string>
    <string name="cloudmessage_info">Alarm Information</string>
    <string name="kClearAlarmInformation">Clear all the alarm information?</string>
    <string name="cloudmessage_linkage">Alarm Linkage</string>
    <string name="kMotionDetectionAlarm">Motion Detection Alarm</string>
    <string name="kIOAlarm">I/O Alarm</string>
    <string name="kShelterAlarm">Video Tampering Alarm</string>
    <string name="kVideoLossAlarm">Video Loss Alarm</string>
    <string name="kVideoTamperingAlarm">Video Tampering Alarm</string>
    <string name="kNonsupportGCM">Failed to enable the GCM due to no Google service installed on your phone.</string>
    <string name="kNeedGMailAccount">At least one Gmail account should be added on your phone.</string>
    <string name="kErrorNotificationGetToken">Failed to get the push token.</string>
    <string name="kErrorNotificationGetPushServerAddress">Failed to get the address of the push server.</string>
    <string name="kErrorNotificationPushServerRegToken">Failed to register the push server.</string>
    <string name="kErrorNotificationPushServerUnregToken">Failed to log out of the push server.</string>
    <string name="kErrorNotificationPushServerResetBadge">Failed to reset the alarm amount on the push server.</string>
    <string name="kErrorNotificationDdnsServerRegDevice">Failed to register the DDNS server.</string>
    <string name="kErrorNotificationDdnsServerUnregDevice">Failed to log out of the DDNS server.</string>
    <string name="kListChannel">Camera List</string>
    <string name="kStartLiveView">Start Live View</string>
    <string name="kFavoriteName">Favorites Name</string>
    <string name="kInputFavoriteName">Enter favorites name.</string>
    <string name="kSelectTooManyChannels">Max. 16 cameras can be selected.</string>
    <string name="kSelectAtLeastOneChannel">Please select one camera.</string>
    <string name="kZeroChannel">Channel Zero</string>
    <string name="kPullDownRefresh">Slide downwards to refresh.</string>
    <string name="kReleaseRefresh">Release to refresh.</string>
    <string name="kRefreshing">Refreshing...</string>
    <string name="kPlayback">Remote Playback</string>
    <string name="kStartTime">From</string>
    <string name="kEndTime">To</string>
    <string name="kStartingPlayback">Starting playback…</string>
    <string name="kPausing">Pausing</string>
    <string name="kPlaybackFinished">Playback finished.</string>
    <string name="kStartPlayback">Start Playback</string>
    <string name="kErrorPlaybackException">Abnormal remote playback.</string>
    <string name="kConfig">Configuration</string>
    <string name="kDeviceManage">Device</string>
    <string name="kDeviceInfo">Device Information</string>
    <string name="kAddDevice">New Device</string>
    <string name="kEditDevice">Edit Device</string>
    <string name="kAlias">Alias</string>
    <string name="kAliasPlaceHolder">Enter alias.</string>
    <string name="kDeviceDomain">Device Domain</string>
    <string name="kDeviceDomainPlaceHolder">Enter device domain.</string>
    <string name="kDeviceIdentity">Device Identifier</string>
    <string name="kDeviceIdentityPlaceHolder">Enter identifier.</string>
    <string name="kRegType">Register Mode</string>
    <string name="kServerAddress">Server Address</string>
    <string name="kServerAddressPlaceHolder">Enter server address.</string>
    <string name="kAddress">Address</string>
    <string name="kAddressPlaceHolder">Enter address.</string>
    <string name="kServerPort">Server port</string>
    <string name="kPort">Port</string>
    <string name="kPortPlaceHolder">Enter port.</string>
    <string name="kUserName">User Name</string>
    <string name="kUserNamePlaceHolder">Enter user name.</string>
    <string name="kChannelNum">Camera No.</string>
    <string name="reg_easy_ddns">HiDDNS</string>
    <string name="reg_ip_domain">IP/Domain</string>
    <string name="reg_ipserver">IP Server</string>
    <string name="kDeleteDevice">Delete device</string>
    <string name="kDeleteFavorite_Android">Delete the favorites</string>
    <string name="kOldPassword">Old</string>
    <string name="kNewPassword">New</string>
    <string name="kConfirmPassword">Confirm</string>
    <string name="kApplicationPasswordPlaceHolder">1~10 characters</string>
    <string name="kErrorCode">Error code</string>
    <string name="kNetDvrErrorPasswordError">Incorrect user name or password.</string>
    <string name="kNetDvrErrorNoEnoughPri">No permission.</string>
    <string name="kNetDvrErrorChannelError">Incorrect channel No.</string>
    <string name="kNetDvrErrorOverMaxLink">No more users can access to the device.</string>
    <string name="kNetDvrErrorMaxUserNum">No more user allowed.</string>
    <string name="kNetDvrErrorNetworkConnectFail">Connection failed.</string>
    <string name="kNetDvrErrorNetworkSendError">Failed to transmit data to the device.</string>
    <string name="kNetDvrErrorNetworkRecvError">Failed to receive data from the device.</string>
    <string name="kNetDvrErrorNetworkRecvTimeOut">Receiving data from the device timed out.</string>
    <string name="kNetDvrErrorNetworkErrorData">Data transmission error.</string>
    <string name="kNetDvrErrorOperNoPermit">No permission.</string>
    <string name="kNetDvrErrorCommandTimeout">Command executing timed out.</string>
    <string name="kNetDvrErrorNoSupport">Not supported by the device.</string>
    <string name="kNetDvrErrorNoResource">Insufficient resources.</string>
    <string name="kNetDvrErrorDvrVoiceOpened">Two-way audio of the device is being occupied.</string>
    <string name="kNetDvrErrorDdnsDevOffline">The device is not registered in the DDNS.</string>
    <string name="kNetDvrErrorDdnsInterError">DDNS server internal error.</string>
    <string name="kErrorResolveDomainFail">Domain name resolution failed.</string>
    <string name="kErrorNetworkNotReachable">Network connection failed.</string>
    <string name="kStartPlayFail">Failed to start playing.</string>
    <string name="kExternalStoragyDisable">There is no SD card or it is unavailable.</string>
    <string name="kExternalStoragyInsufficientSpace">Insufficient SD card space.</string>
    <string name="kErrorIntercomException">Abnormal two-way audio.</string>
    <string name="kErrorStartIntercomFail">Starting two-way audio failed.</string>
    <string name="kErrorPlaybackNoRecording">No record files.</string>
    <string name="kErrorDeviceNameNull">Alias cannot be empty.</string>
    <string name="kErrorDeviceNameExist">Alias already exists.</string>
    <string name="kErrorDeviceAddrNull">Address cannot be empty.</string>
    <string name="kErrorDdnsAddrNull">Server address cannot be empty.</string>
    <string name="kErrorDdnsIdentityNull">Device domain or identifier cannot be empty.</string>
    <string name="kErrorDevicePortNull">Port cannot be empty.</string>
    <string name="kErrorDeviceUserNameNull">User name cannot be empty.</string>
    <string name="kErrorDevicePasswordNull">Password cannot be empty.</string>
    <string name="kErrorDevicePortRange">Device port range is from 1 to 65535.</string>
    <string name="kErrorDeviceExist">Device already exists.</string>
    <string name="kErrorDeviceNumFull">Max. 100 devices can be added.</string>
    <string name="kErrorFavoriteNameNull">Favorites name cannot be empty.</string>
    <string name="kErrorFavoriteNameExist">Favorites name already exists.</string>
    <string name="kErrorFavoriteNumFull">Max. 32 favorites can be added.</string>
    <string name="kErrorApplicationPasswordWrong">Incorrect password.</string>
    <string name="kErrorApplicationPasswordNotMatch">Password and confirm password do not match.</string>
    <string name="kTurnPasswordOn">Turn Password On</string>
    <string name="kTurnPasswordOff">Turn Password Off</string>
    <string name="kModifyPassword">Modify Password</string>
    <string name="kApplicationUpgrade">Software Update</string>
    <string name="kHelp">Help</string>
    <string name="kVersionFeatures">New Features</string>
    <string name="kCheckNewVersion">Checking for updates…</string>
    <string name="kFindNewVersion">New version available</string>
    <string name="kAlreadyLatest">No newer version available.</string>
    <string name="kCheckNewVersionFail">Checking new version error, please try again.</string>
    <string name="kNewVersionInfo">Updates</string>
    <string name="capture_picture_succ">Capture succeeded.</string>
    <string name="capture_picture_failed">Capture failed.</string>
    <string name="kAbout">About</string>
    <string name="kMail">Feedback</string>
    <string name="kMailSubject">(Android) Feedback</string>
    <string name="about_version_word">Version</string>
    <string name="about_build_date">Build 20131029</string>
    <string name="update_new_word">New</string>
    <string name="update_send_mail_tips">Welcome to Mail</string>
    <string name="kGuide1Description1">Display the channel list and select the channel(s) for live view.</string>
    <string name="kGuide2Description1">Multiple channels can be selected for live view.</string>
    <string name="kGuide3Description1">Select a channel and click for live view.</string>
    <string name="kGuide4Description1">Display Main Menu.</string>
    <string name="kGuide4Description2">Slide to find more features.</string>
    <string name="kImageManage">Picture &amp; Video</string>
    <string name="kPlayFail">Playing failed.</string>
    <string name="kConformDelete">Confirm to delete?</string>
    <string name="kIntroductionSkipDescription">Skip</string>
    <string name="kIntroductionStartDescription">"Let's start"</string>
    <string name="kIntroduction1Description1">Slide to go the next or previous screen</string>
</resources>