<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/ptzbar_height" android:weightSum="4.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="@dimen/common_textsize_small_18sp" android:textColor="@color/quality_button_colorstatelist_selector" android:id="@id/quality_clear_button" android:background="@drawable/quality_left_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/kQuality1" android:layout_weight="1.0" android:contentDescription="@string/nothing" />
    <Button android:textSize="@dimen/common_textsize_small_18sp" android:textColor="@color/quality_button_colorstatelist_selector" android:id="@id/quality_balance_button" android:background="@drawable/quality_middle_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/kQuality2" android:layout_weight="1.0" android:contentDescription="@string/nothing" />
    <Button android:textSize="@dimen/common_textsize_small_18sp" android:textColor="@color/quality_button_colorstatelist_selector" android:id="@id/quality_fluent_button" android:background="@drawable/quality_middle_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/kQuality3" android:layout_weight="1.0" android:contentDescription="@string/nothing" />
    <Button android:textSize="@dimen/common_textsize_small_18sp" android:textColor="@color/quality_button_colorstatelist_selector" android:id="@id/quality_custom_button" android:background="@drawable/quality_right_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/kQualityCustom" android:layout_weight="1.0" android:contentDescription="@string/nothing" />
</LinearLayout>