<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" style="@style/leba_bg_layout">
        <TableLayout android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/password_new_textview" android:text="@string/kPassword" style="@style/password_textview_style" />
                <EditText android:id="@id/password_new_edittext" android:hint="@string/kApplicationPasswordPlaceHolder" style="@style/password_edittext_style" />
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/password_comfirm_textview" android:text="@string/kConfirmPassword" style="@style/password_textview_style" />
                <EditText android:id="@id/password_comfirm_edittext" android:hint="@string/kApplicationPasswordPlaceHolder" style="@style/password_edittext_style" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>