<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@*android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/datepicker_layout" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/common_listview_item_height" android:weightSum="1.0">
        <ImageView android:id="@id/playback_fold_unfold" android:background="@drawable/list_put_away" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/nothing" />
        <LinearLayout android:orientation="vertical" android:layout_width="52.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip">
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/playback_calendar" android:background="@drawable/list_starttime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/nothing" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:id="@id/playbackchannel_timeitem_title_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textColor="@*android:color/white" android:layout_gravity="center_horizontal" android:id="@id/playback_start_end_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kStartTime" android:maxLines="1" />
            </LinearLayout>
            <TextView android:textColor="@*android:color/white" android:id="@id/text_colon_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/denotation_colon" />
            <TextView android:textColor="@*android:color/white" android:id="@id/playback_start_end_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>